--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     runtimeOnly("ch.qos.logback:logback-classic")
     implementation("io.micronaut:micronaut-validation")
     implementation 'org.postgresql:postgresql:42.3.1'
+    implementation group: 'org.json', name: 'json', version: '20211205'
 
 }
 
